--- a/index.html
+++ b/index.html
@@ -887,7 +887,7 @@ development: {
   },
 development: {
           presentationIframe: "1ESO/Tema-Estructuras-y-mecanismos.pdf", 
-note: "Material de refuerzo elaborado por Pedro Landín – CPR Sagrado Corazón de Jesús (Pontevedra). Disponible en <a href='http://pelandintecno.blogspot.com' target='_blank'>pelandintecno.blogspot.com</a>"
+note: "Material elaborado por Pedro Landín – CPR Sagrado Corazón de Jesús (Pontevedra). Disponible en <a href='http://pelandintecno.blogspot.com' target='_blank'>pelandintecno.blogspot.com</a>"
         },
   "news": [
     {
@@ -2926,7 +2926,7 @@ development: {
   },
 development: {
           presentationIframe: "4ESO/T4_Neumatica.pdf",
-note: "Material de refuerzo elaborado por Pedro Landín – CPR Sagrado Corazón de Jesús (Pontevedra). Disponible en <a href='http://pelandintecno.blogspot.com' target='_blank'>pelandintecno.blogspot.com</a>"
+note: "Material elaborado por Pedro Landín – CPR Sagrado Corazón de Jesús (Pontevedra). Disponible en <a href='http://pelandintecno.blogspot.com' target='_blank'>pelandintecno.blogspot.com</a>"
 
         },
   "news": [
@@ -3167,7 +3167,7 @@ development: {
   },
 development: {
   presentationIframe: "4ESO/4º-ESO-TEMA-1-INSTALACIONES-EN-VIVIENDAS.pdf",
-  note: "Material reutilizado del Departamento de Tecnología – IES Antonio Sequeros (IES Antonio Sequeros). " +
+  note: "Material del Departamento de Tecnología – IES Antonio Sequeros (IES Antonio Sequeros). " +
         "Fuente: https://portal.edu.gva.es/iesantoniosequeros/organizacion/departamentos/tecnologia/ " +
         "Licencia: CC BY-SA 4.0 (https://creativecommons.org/licenses/by-sa/4.0/)."
 },
@@ -3866,4 +3866,5 @@ document.getElementById('presentationNote').innerHTML = tema.development.note ||
   </script>
 </body>
 </html>
+
 
