--- a/index.html
+++ b/index.html
@@ -1828,7 +1828,7 @@ development: {
     ]
   },
   "summary": {
-    "texto": "En esta unidad dominarás tanto el dibujo técnico manual como las herramientas CAD profesionales para comunicar tus ideas con precisión.<br><br>Comenzarás revisando los principios del dibujo técnico:<br>- Tipos de líneas: continuas, ocultas y de corte.<br>- Acotaciones y escalas según norma UNE.<br>- Dibujarás un elevación y una planta de un objeto sencillo.<br><br>Después estudiarás las vistas:<br>- Ortogonales: frontal, lateral y superior.<br>- Isométrica: simula profundidad con ángulos de 30 °. Realizarás ambos tipos manualmente y compararás resultados.<br><br>En la parte digital, usarás AutoCAD o DraftSight para:<br>- Crear un plano 2D con capas y acotaciones avanzadas.<br>- Importar tu boceto escaneado y vectorizarlo.<br><br>Para el modelado 3D, pasarás a Fusion 360 o SolidWorks:<br>- Generarás sólidos mediante extrusiones, revoluciones y lofts.<br>- Montarás un ensamblaje de varias piezas y estudiarás restricciones cinemáticas.<br><br>Finalmente, exportarás tus trabajos a formatos estándar:<br>- DWG/DXF para planos 2D.<br>- STEP para intercambio industrial.<br>- STL u OBJ para impresión 3D.<br><br>**Glosario:**<br>- Escala: relación tamaño real / tamaño en dibujo.<br>- Isométrica: proyección sin perspectiva.<br>- Loft: unión de perfiles 2D para formar un sólido.<br>- STEP: formato neutral CAD para intercambio.<br><br>Con estas habilidades podrás preparar toda la documentación técnica necesaria para fabricar o presentar tus diseños con rigor profesional.<br>",
+"texto": "En esta unidad aprenderás a diferenciar entre mapas de puntos y las imágenes vectoriales, dos tipos de representaciones gráficas fundamentales en el diseño técnico y gráfico.<br><br>Comenzarás conociendo las herramientas informáticas de uso común, como las aplicaciones de dibujo vectorial, y cómo estas ofrecen distintas posibilidades para la creación de proyectos técnicos.<br><br>Explorarás las aplicaciones informáticas utilizadas para realizar tareas específicas en el diseño gráfico, identificando sus herramientas y funcionalidades, como las que aparecen en la pantalla cuando trabajas en un software de dibujo.<br><br>También aprenderás sobre las herramientas informáticas básicas utilizadas en el diseño industrial, valorando la expresión gráfica por ordenador como una ventaja clave para construir proyectos en el aula-taller de tecnología.<br><br>A lo largo de la unidad, descubrirás el proceso tecnológico y cómo se vincula con el diseño de objetos reales y la expresión gráfica, permitiéndote utilizar el dibujo técnico como medio de comunicación.<br><br>Conocerás los programas de simulación y animación más básicos y cómo se emplean en el desarrollo de proyectos técnicos. Además, se te enseñará el uso de aplicaciones de dibujo vectorial para elaborar planos técnicos.<br><br>Adquirirás habilidades para expresar ideas técnicas mediante dibujos, utilizando códigos que estructuren y esclarezcan la información. Esto te permitirá interpretar planos, circuitos y esquemas elaborados con herramientas informáticas.<br><br>Finalmente, valorarás la importancia del dibujo técnico como herramienta de comunicación en el ámbito de la tecnología y el diseño gráfico, aprendiendo a utilizar diferentes aplicaciones informáticas para el desarrollo de proyectos tecnológicos.<br>"
     "puntos": [
       "Aplicar normas UNE de dibujo técnico.",
       "Realizar vistas ortogonales e isométricas manualmente.",
@@ -1839,7 +1839,7 @@ development: {
     "image": "img/tema15.jpg"
   },
 development: {
-          presentationIframe: "https://www.aulademartin.com/tecnología-y-digitalización/tyd-3º-eso/diseño-2d"
+          presentationIframe: "https://procomun.intef.es/ode/view/es_2024042212_9165921"
         },
   "news": [
     {
@@ -3866,5 +3866,6 @@ document.getElementById('presentationNote').innerHTML = tema.development.note ||
   </script>
 </body>
 </html>
+
 
 
