--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
           3º ESO - Control y Robótica
         </button>
 <button class="bg-gradient-primary text-white p-4 rounded-2xl shadow hover:scale-[1.02] transition" onclick="showCourseTopics('4eso')">
-          4º ESO - Tecnología y Digitalización
+          4º ESO - Tecnología 
         </button>
         </button>
 <button class="bg-gradient-primary text-white p-4 rounded-2xl shadow hover:scale-[1.02] transition" onclick="showCourseTopics('4eso-prog-robotica')">
@@ -5162,6 +5162,7 @@ document.getElementById('presentationNote').innerHTML = tema.development.note ||
   </script>
 </body>
 </html>
+
 
 
 
